--- a/trunk/www/index.html
+++ b/trunk/www/index.html
@@ -13,93 +13,35 @@
 </head>
 <body>
 
-<p>This is the initial web content for your project.  Please customize
-this to fit your project.  You don't need to answer all these questions
-or follow this exact format, but we do like to see this kind of
-information before we approve projects for public viewing.
-</p>
-
-<p>Until your project is approved, only you can view it and work on
-it.
-</p>
-
-<ul>
-<li>This index.html will be used if and only if you have the "Use
-Project Home Page" option checked on the "Administer Project" page
-(click the "Admin" tab).</li>
-
-<li>To edit this file, check out your project via CVS and edit www/index.html.
-
-<li>You can 'cvs add' and commit other files under the project's "www"
-directory and they will published to your project web site.</li>
-
-<li>Also, consider starting a thread in the "dev" mailing list to get
-these discussion started.  A good one is an "introduction" thread where
-people post messages about themselves and their interest in the
-project.</li>
-
-<li>You can add a "Highlights:" line to the top of all web pages by adding a file www/project_highlights.html </li>
-</ul>
-
-
 <h3>Mission</h3>
 
-<p>What is the goal of this project?
+<p>This project is bound to the <a href="http://scarab.tigris.org">Scarab</a> Issue Tracker project.
 </p>
 
-<p>What is the scope of this project?
-</p>
-
-<p>For example:</p>
+<p>It is a <strong>sandbox</strong> for the development of software components that</p>
 
 <ul>
-<li>Develop just enough functionality to scratch a particular itch</li>
-<li>Build a tool just like XYZ, but less broken</li>
-<li>Build the best XYZ-tool ever!</li>
+<li>are used with the current Scarab application but do not belong to the core application:
+<ul>
+<li>the web installer
+</li>
+</ul>
+<li>could be used in future versions of Scarab if they reach maturity.</li>
 </ul>
 
 
-<p>What are high-level features you are sure to build?
-</p>
-<ul>
-
-<li>What would you write on a billboard about your project? Users
-might only look for a few seconds.</li>
-
-<li>Use the issue tracker to track features and enhancement
-requests. It is not just for bugs, pre-populate it with feature
-descriptions so that potential contributors know what you would like them
-to work on.</li>
-</ul>
-
-<p>What are the high-level assumptions or ground rules for the project?
+<p>At the moment and certainly for a while this project does not produce any useful deliverable by itself.
+So iff you are looking for an application, you are at the wrong place,
+<a href="http://scarab.tigris.org/">go back to the Scarab home page.</a> 
 </p>
 
-<p>For example:
-</p>
-
-<ul>
-<li> we will use programming language X on operating system Y for now.
-
-<li>We will, or will not, consider certain functional areas like
-internationalization, high security, concurrency, etc.  The list of
-functional areas will depend on what you are trying to do.
-
-<li>Try to keep this part short.
-</ul>
+<p>On the other hand, if you are interested in reading/writing code that could shape the future of Scarab, welcome!</p>
 
 
 <h3>Related resources</h3>
 
 <ul>
-<li>Link to other stuff that you know about.  It will help you
-research requirements and provide a useful resource to potential
-contributors.</li>
-
-<li>Why reinvent the wheel? What is better about this wheel?  Is there
-any existing project that you can partner with or reuse?</li>
-
-<li>Where would you go to try to find potential contibutors?</li>
+<li>The <a href="http://scarab.tigris.org/">Scarab</a> Issue Tracker.</li>
 </ul>
 
 </body>
