--- a/trunk/www/index.html
+++ b/trunk/www/index.html
@@ -15,7 +15,7 @@
 
 <h3>Mission</h3>
 
-<p>This project is bound to the <a href="http://scarab.tigris.org">Scarab</a> Issue Tracker project.
+<p>This project is bound to the <a href="http://scarab.tigris.org">Scarab</a> project.
 </p>
 
 <p>It is a <strong>sandbox</strong> for the development of software components that</p>
@@ -31,7 +31,7 @@
 
 
 <p>At the moment and certainly for a while this project does not produce any useful deliverable by itself.
-So iff you are looking for an application, you are at the wrong place,
+So if you are looking for an application, you are at the wrong place,
 <a href="http://scarab.tigris.org/">go back to the Scarab home page.</a> 
 </p>
 
