Attempt to improve home page using Tigris styles.
git-svn-id: http://scarab-incubator.tigris.org/svn/scarab-incubator@12 c2960bf1-992c-0410-bba2-fdfcf5345efc

--- a/trunk/www/index.html
+++ b/trunk/www/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+<div class="h1">
 <h1>Mission</h1>
 
 <p>This project is a sub-project of the <a href="http://scarab.tigris.org">Scarab Issue Tracker</a> project.
@@ -32,18 +33,22 @@ So if you are looking for an application, you are at the wrong place,
 </p>
 
 <p>On the other hand, if you are interested in reading/writing code that could shape the future of Scarab, welcome!</p>
-
+</div>
+<div class="h1">
 <h1>Featured sub-projects</h1>
+<div class="h2">
 <h2>Tools & Goodies for the current Scarab application</h2>
 <ul>
 <li><a href="nonav/scarab-web-installer/">scarab-web-installer</a> : an installation web app for Scarab 0.21 and TRUNK.</li>
 </ul>
-
+</div>
+<div class="h2">
 <h2>Experimental software components</h2>
 <ul>
 <li><a href="nonav/scarab-persistent-om/">scarab-persistent-om</a> :
 an alternative implementation of the Scarab Object Model + persistence layer using JPA/EJB3/Hibernate instead of Torque (current implementation).</li>
 </ul>
-
+</div>
+</div>
 </body>
 </html>
